# OpenCodeMemory

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  techspec.md
.github/workflows/: publish.yml  test.yml
hooks/claude-code/: post-tool-use.sh  session-end.sh  session-start.sh
hooks/cursor/: after-file-edit.sh  session-end.sh  session-start.sh
ocm/: server.py
ocm/hooks/: file_tracker.py  git.py  handler.py
ocm/install/: _resources.py  claude_code.py  cli.py  cursor.py  server_config.py
ocm/rules/: CLAUDE.md.snippet  cursorrules.snippet  ocm-checkpoint.mdc
ocm/search/: fts.py  preprocessor.py
ocm/storage/: db.py  markdown_renderer.py  schema.sql
ocm/tools/: checkpoint.py  search.py  session.py
rules/: cursorrules.snippet  ocm-checkpoint.mdc
tests/: conftest.py  test_checkpoint.py  test_cli_checkpoint.py  test_hooks_handler.py  test_markdown_renderer.py  test_search.py
tests/fixtures/: sample_session.md
