[project]
name = "opencodememory"
dynamic = ["version"]
description = "Persistent local session memory for AI coding assistants via MCP and CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Achintya Shankhdhar", email = "achintyashankhdhar@gmail.com" },
]
keywords = ["mcp", "claude-code", "cursor", "memory", "ai-coding", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
dependencies = [
    "mcp[cli]>=1.0",
    "gitpython>=3.1",
    "click>=8.0",
    "python-dateutil>=2.9",
]

[project.urls]
Homepage = "https://github.com/AchintyaX/OpenCodeMemory"
Repository = "https://github.com/AchintyaX/OpenCodeMemory"
Issues = "https://github.com/AchintyaX/OpenCodeMemory/issues"
Changelog = "https://github.com/AchintyaX/OpenCodeMemory/releases"

[project.scripts]
ocm = "ocm.install.cli:main"
ocm-hook = "ocm.hooks.handler:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ocm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ocm"]
